// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copyToClipboard matches snapshot 1`] = `
<Fragment>
  <input
    aria-hidden={true}
    className="input"
    readOnly={true}
    style={
      {
        "height": "1px",
        "opacity": 0,
        "position": "absolute",
        "width": "1px",
      }
    }
    tabIndex={-1}
    value="text"
  />
  <Popover
    onOpenChange={[Function]}
    open={false}
    positioning="above"
  >
    <PopoverTrigger
      disableButtonEnhancement={true}
    >
      <Button
        appearance="subtle"
        aria-label="common.maskedCopyableTextField.copy.label"
        icon={<CopyRegular />}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </PopoverTrigger>
    <PopoverSurface
      style={
        {
          "padding": 4,
        }
      }
    >
      <Text>
        common.maskedCopyableTextField.copy.label
      </Text>
    </PopoverSurface>
  </Popover>
</Fragment>
`;

exports[`copyToClipboard matches snapshot disabled 1`] = `
<Fragment>
  <input
    aria-hidden={true}
    className="input"
    disabled={true}
    readOnly={true}
    style={
      {
        "height": "1px",
        "opacity": 0,
        "position": "absolute",
        "width": "1px",
      }
    }
    tabIndex={-1}
    value="text"
  />
  <Popover
    onOpenChange={[Function]}
    open={false}
    positioning="above"
  >
    <PopoverTrigger
      disableButtonEnhancement={true}
    >
      <Button
        appearance="subtle"
        aria-label="common.maskedCopyableTextField.copy.label"
        icon={<CopyRegular />}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </PopoverTrigger>
    <PopoverSurface
      style={
        {
          "padding": 4,
        }
      }
    >
      <Text>
        common.maskedCopyableTextField.copy.label
      </Text>
    </PopoverSurface>
  </Popover>
</Fragment>
`;
